[package]
name = "advent2020"
version = "0.1.0"
authors = ["Pedro de Oliveira <falsovsky@gmail.com>"]
edition = "2018"

[[bin]]
name = "day01"
path = "src/day01.rs"

[[bin]]
name = "day02"
path = "src/day02.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
