[package]
name = "advent2020"
version = "0.1.0"
authors = ["Pedro de Oliveira <falsovsky@gmail.com>"]
edition = "2018"

[[bin]]
name = "day01"
path = "src/day01.rs"

[[bin]]
name = "day02"
path = "src/day02.rs"

[[bin]]
name = "day03"
path = "src/day03.rs"

[[bin]]
name = "day04"
path = "src/day04.rs"

[[bin]]
name = "day05"
path = "src/day05.rs"

[[bin]]
name = "day06"
path = "src/day06.rs"

[[bin]]
name = "day07"
path = "src/day07.rs"

[[bin]]
name = "day08"
path = "src/day08.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
